--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 *{
     box-sizing: border-box;
     margin: 0;
-    outline: 1px solid red;
+ 
     
 }
 body{
@@ -292,7 +292,7 @@ section > h2{
     opacity: .7;
 }
 .testimonial-container{
-    padding: 30px 40px;
+    /* padding: 30px 40px; */
     display: flex;
     gap: 20px;
 
