--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ font-family: 'Fraunces', serif;
 width: 100%;
 overflow-x: hidden;
 }
+/* HEADER AND NAVBAR */
 header{
     background: url("images/desktop/image-header.jpg");
     background-repeat: no-repeat;
@@ -38,9 +39,9 @@ header{
 
 nav{
     display: flex;
-    padding-top: 40px;
+    padding-top: 30px;
     padding-bottom: 10px;
-    margin-bottom: 7rem;
+    margin-bottom: 0rem;
 }
 nav >img{
     margin-left: 30px;
@@ -67,6 +68,13 @@ nav >img{
 .nav-links{
     text-decoration: none;
     color: white;
+    /* font-size: 18px; */
+}
+.nav-links:hover{
+    background-color: #1cb1f5;
+    color: var(--White);
+    border-radius: 40px;
+    padding: 15px;
 }
 .active{
     color: var(--VeryDarkDesaturatedBlue);
@@ -78,7 +86,7 @@ nav >img{
     border-radius: 40px;
 }
 .active:hover{
-    background-color: var(--DarkBlue);
+    background-color: rgba(28,177,245,1);
     color: var(--White);
 }
 .hambuger-icon{
@@ -104,7 +112,7 @@ header > h2{
 
 .arrow{
     align-self: center;
-    margin-top: 40PX;
+    margin-top:80PX;
     cursor: pointer;
 }
 
